# DnD-Candlekeep-Summaries

./: .gitignore  404.html  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
Sessions/: index.html
assets/javascripts/: graph.json  interactive_graph.js
assets/stylesheets/: interactive_graph.css
candlekeep_summaries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: Sessions.md  index.md  tags.md
docs/artefakty/: Dýka s uroborem.md  Nástrahy temných hlubin.md  Triunské kameny.md
docs/assets/javascripts/: obsidian_tags.js
docs/assets/stylesheets/: obsidian_tags.css  wiki_meta.css
docs/characters/: Bonifác Břídil.md  Fistandia.md  Lukas Grosvenor.md
docs/locations/: Maerin.md
docs/lokace/: Feywild.md  Maerin.md  Ospalá lasička.md  Vermeillon.md
docs/materiály/: Dopis od Miravelle.md  Mapa Candlekeepu.md  Mapa Faerunu.md
docs/postavy/: Astra Vorn.md  Barren.md  Blenyss.md  Caelor.md  Dobrotivá Meg.md  Drobek.md  Eilar.md  Elroster Corvis.md  Erilar.md  Freyot.md  Gilqirelle Quushoth.md  Glin.md  Gor.md  Grako.md  Gremaur.md  Khe'ril Hammerbind.md  Lei Duvezin.md  Miranda.md  Miravelle Corvis.md  Naxis Pal.md  Rha'ga.md  Tam.md  Thandor Corvis.md
docs/sessions/: 1. Session.md  12.12.2025.md  2. Session.md  3. Session.md  4. Session.md  5. Session.md  6. Session.md  7. Session.md  8. Session.md
overrides/: main.html
plugins/: __init__.py  obsidian_graph.py
search/: search_index.json
sessions/12.12.2025/: index.html
