[project]
name = "candlekeep-summaries"
version = "0.1.0"
description = "Candlekeep Summaries"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-callouts>=1.16.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.0",
    "mkdocs-obsidian-bridge>=1.3.1",
    "mkdocs-obsidian-interactive-graph-plugin>=0.3.1",
    "mkdocs-obsidian-links>=1.0.4",
    "mkdocs-obsidian-support-plugin>=1.4.1",
    "pymdown-extensions>=10.19",
    "ruff>=0.14.14",
]

[project.entry-points."mkdocs.plugins"]
obsidian-graph = "plugins:ObsidianInteractiveGraphPlugin"
